Fixed the overflow error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@
   --text-first: hsl(229, 33%, 23%);
 }
 
+html,
 body {
   font-size: 18px;
   overflow-x: hidden;
@@ -268,6 +269,6 @@ h4 {
 
   .hero .section-right img {
     width: 138vw;
-    transform: translateX(-1.1em);
+    transform: translateX(-1.16em);
   }
 }
